objects/Positioning_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Positioning Plans</relationshipLabel>
        <relationshipName>Positioning_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Positioning Plan</relationshipLabel>
        <relationshipName>Positioning_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Values__c</fullName>
        <label>Customer Values</label>
        <picklist>
            <picklistValues>
                <fullName>Operational availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low operational cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-time completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low cost/price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rapid payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Execution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PositioningPlanOwnerName__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PositioningPlanOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <label>Positioning Plan</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Positioning Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positioning Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>